# Pixio-MCP

./: .gitignore  CONTRACTS.md  README.md  pixio-mcp-prd.md  pyproject.toml
src/pixio_mcp/: __init__.py  budget.py  cache.py  client.py  config.py  errors.py  pathguard.py  runtime.py  server.py
src/pixio_mcp/tools/: catalog.py  credits.py  generation.py  media.py
tests/: conftest.py  test_acceptance.py  test_budget.py  test_cache.py  test_catalog.py  test_client.py  test_config.py  test_credits.py  test_errors.py  test_generation.py  test_media.py  test_pathguard.py  test_redaction.py  test_server.py
